# pkb

./: .env  NOTE.md  README.md  pyproject.toml
content/: README.md  basics.md  example_pdf.md  html.md  links.md  search.md  vue-js-app.md
content/folder2/folder3/: file5.md
content/folder2/folder3/folder4/folder5/folder6/: file7.md
pkb/: pyproject.toml
tests/pkb/: test_fast.py
