[project]
name = "pkb"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyw208", email = "hyw208@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
pkb = "pkb.hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
